# cotnav

./: .gitignore  .gitmodules  README.md  get_mission_data_based_on_rotation.py  pyproject.toml
configs/dataset/: grandtour_raw.yaml
configs/eval/: default.yaml
configs/model/: pivot.yaml
cotnav/: builders.py
cotnav/dataset/: dataset_builders.py  dataset_helpers.py  template_dataset.py
cotnav/eval/: cli.py  registry.py  runners.py
cotnav/geometry/: camera.py  motion.py
cotnav/models/prompts/: conditional_intermediate_prompt.json  conditional_prompt.txt  openaiprompt.txt  parallel_intermediate_prompt.json  parallel_prompt.txt
cotnav/models/vlms/: basemodel.py  infer_registry.py  interface.py  openaimodel.py  pivot_wrapper.py  util.py
cotnav/models/vlms/providers/: openai_infer.py
cotnav/preprocessing/: bag_utils.py  process_bags.py  process_utils.py  track_points.py
cotnav/preprocessing/config/: grandtour.yaml
cotnav/utils/: eval_utils.py  image_utils.py  loader_utils.py  math_utils.py  metric_utils.py  time_utils.py  train_utils.py
scripts/: evaluate.py
scripts/notebooks/: bagtesting.ipynb  batch_inference_example.ipynb  odom_visualization.ipynb  test.py  vlm_testing.ipynb  vlmtesting.ipynb
scripts/preprocessing/: bag_utils.py  process_bags.py  process_utils.py
scripts/preprocessing/config/: grandtour.yaml  scand.yaml
scripts/utils/: loader_utils.py
